================================================================================
Changes since v14.01
================================================================================

--------------------------------------------------------------------------------
general

   1) Moved the declaration of LCreal from 'openeaagles/config.h' to
      'openeaagles/basic/support.h', since 'config.h' should only
      contain C pre-processor directives.

--------------------------------------------------------------------------------
basic

   support.h
      1) Adding more explicit "std" namespace qualifiers and reducing the number
         of includes (e.g., cstdio, cstdlib, string)

--------------------------------------------------------------------------------
basicGL

   Image.cpp
      1) readFileBMP() -- Corrected the checks to properly reject files that are not
         bitmap files (bug fix) or other invalid files.


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
gui-glut

--------------------------------------------------------------------------------
maps


--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   StabilizingGimbal.cpp
      1) fixed slottable entry (bug fix)

--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------
